# aria-studio

./: .gitignore  01_Vision.md  02_PRD.md  03_System_Architecture.md  04_Audio_Engine.md  05_MIDI_Engine.md  06_Piano_Roll.md  07_Automation_Engine.md  08_Track_System.md  09_Mixer.md  10_DSP.md  11_Plugin_Host.md  12_Project_Format.md  13_File_System.md  14_UI_Framework.md  15_Theme_System.md  16_Rendering.md  17_Graphics.md  18_Scripting.md  19_API.md  20_Testing.md  21_Build_System.md  22_Database.md  23_Planning.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
.atl/: skill-registry.md
.github/workflows/: ci.yml
cmake/: CompilerOptions.cmake  FindDawn.cmake  FindDependencies.cmake  FindSkiaFetch.cmake
openspec/: config.yaml
rust/: Cargo.toml
rust/aria-bridge/: Cargo.toml
rust/aria-bridge/src/: db_ffi.rs  fs_ffi.rs  lib.rs  scan_progress.rs
rust/aria-database/: Cargo.toml
rust/aria-database/src/: errors.rs  lib.rs  migration.rs  queries.rs  schema.rs  search.rs
rust/aria-filesystem/: Cargo.toml
rust/aria-filesystem/src/: lib.rs  metadata.rs  scanner.rs  watcher.rs
rust/aria-networking/: Cargo.toml
rust/aria-networking/src/: lib.rs  protocol.rs  sync.rs
rust/include/: aria_rust.h
scripts/: setup_dev.py
src/: main.cc
src/audio/: atomic_parameter.h  audio_buffer.h  audio_clock.cc  audio_clock.h  audio_engine.cc  audio_engine.h  audio_graph.cc  audio_graph.h  audio_node.cc  audio_node.h  audio_node_types.cc  audio_node_types.h  buffer_pool.cc  buffer_pool.h  control_message_queue.h  diagnostics.cc  diagnostics.h  multi_core_distributor.cc  multi_core_distributor.h  pdc_manager.cc  pdc_manager.h  simd_ops.cc  simd_ops.h  src_converter.cc  src_converter.h  tempo_map.cc  tempo_map.h  track_processor.cc  track_processor.h  transport.cc  transport.h  wsola.cc  wsola.h
src/automation/: automation_clip.cc  automation_clip.h  automation_engine.cc  automation_engine.h  automation_types.h  cache.cc  cache.h  envelope.cc  envelope.h  interpolation.h  lane.cc  lane.h  lfo_clip.cc  lfo_clip.h  macros.cc  macros.h  modulation_matrix.cc  modulation_matrix.h  modulation_source.cc  modulation_source.h  modulation_types.cc  modulation_types.h  nested_modulation.cc  nested_modulation.h  note_property_source.cc  note_property_source.h  random_source.cc  random_source.h  recorder.cc  recorder.h  step_clip.cc  step_clip.h  step_sequencer_source.cc  step_sequencer_source.h
src/browser/: arrangement_drop_target.cc  arrangement_drop_target.h  browser_engine.cc  browser_engine.h  browser_panel.cc  browser_panel.h  browser_panel_gpu.cc  browser_panel_gpu.h  preview_player.cc  preview_player.h  search_provider.cc  search_provider.h  waveform_cache.cc  waveform_cache.h
src/dsp/: dsp_engine.cc  dsp_engine.h
src/graphics/: animation_types.h  animator.cc  animator.h  dirty_tracker.cc  dirty_tracker.h  easing.h  file_watcher.cc  file_watcher.h  focus_manager.cc  focus_manager.h  graphics_engine.cc  graphics_engine.h  graphics_types.h  input_types.h  layout_engine.cc  layout_engine.h  render_loop.cc  render_loop.h  shortcut_manager.cc  shortcut_manager.h  skia_canvas.cc  skia_canvas.h  theme_engine.cc  theme_engine.h  theme_types.h  widget.cc  widget.h  widget_button.cc  widget_button.h  widget_container.cc  widget_container.h  widget_rect.cc  widget_rect.h  widget_text.cc  widget_text.h  widget_themed.cc  widget_themed.h
src/kernel/: application.cc  application.h  command_queue.cc  command_queue.h  crash_handler.cc  crash_handler.h  event_bus.cc  event_bus.h  event_types.h  service_locator.cc  service_locator.h  undo_stack.cc  undo_stack.h
src/midi/: jitter_compensator.cc  jitter_compensator.h  midi_clip.cc  midi_clip.h  midi_clock.cc  midi_clock.h  midi_engine.cc  midi_engine.h  midi_graph.cc  midi_graph.h  midi_node.cc  midi_node.h  midi_node_types.cc  midi_node_types.h  midi_recorder.cc  midi_recorder.h  midi_types.h  mpe.cc  mpe.h  note_tracker.cc  note_tracker.h
src/mixer/: builtin_eq.cc  builtin_eq.h  channel.cc  channel.h  master_channel.cc  master_channel.h  mixer.cc  mixer.h  mixer_ui.cc  mixer_ui.h  routing.cc  routing.h  sidechain.cc  sidechain.h
src/model/: audio_clip.cc  audio_clip.h  automation_clip_wrapper.cc  automation_clip_wrapper.h  clip.cc  clip.h  freeze_manager.cc  freeze_manager.h  marker.cc  marker.h  routing.cc  routing.h  session.cc  (+6 more)
src/scripting/: CMakeLists.txt  api_bindings.cc  api_bindings.h  lua_runtime.cc  lua_runtime.h  macro_recorder.cc  macro_recorder.h  script_instance.cc  script_instance.h  script_manager.cc  script_manager.h  script_window.cc  script_window.h
tests/: CMakeLists.txt  test_browser.cpp  test_db_integration.cpp  test_main.cc  test_watcher_manual.cpp
tests/integration/: test_freeze_restore.cc  test_transport_sync.cc  test_wsola_poly.cc
tests/scripting/: test_action_registry.cc  test_api_bindings.cc  test_file_watcher.cc  test_lua_runtime.cc  test_macro_recorder.cc  test_script_instance.cc  test_script_manager.cc  test_script_window.cc  test_scripting_build.cc
tests/test_common/: audio_harness.cc  audio_harness.h  test_plugin.cc  test_plugin.h
tests/unit/: test_animation.cc  test_arrangement.cc  test_audio_buffer.cc  test_audio_clip.cc  test_audio_clock.cc  test_audio_graph.cc  test_audio_pipeline.cc  test_automation_clip_wrapper.cc  test_automation_clips.cc  test_automation_points.cc  test_browser_panel_gpu.cc  test_builtin_eq.cc  test_channel.cc  test_chord_generator.cc  test_clip.cc  test_diagnostics.cc  test_driver_mock.cc  test_event_bus.cc  test_export.cc  test_expression_lane.cc  test_ffi_bridge.cc  test_freeze_manager.cc  test_ghost_notes.cc  test_graphics_engine.cc  test_humanize.cc  test_input_system.cc  test_kernel.cc  test_markers.cc  test_master_channel.cc  test_metering.cc  test_midi_clock.cc  test_midi_driver_mock.cc  test_midi_graph.cc  test_midi_main.cc  test_midi_recorder.cc  test_midi_types.cc  test_mixer.cc  test_model_types.cc  test_modulation.cc  test_mpe.cc  (+42 more)
themes/: aria-dark.json  aria-high-contrast.json  aria-light.json
ui/: package-lock.json  package.json  tsconfig.json
(+305 files in other folders)
